# projectBoard-plugin

./: .gitignore  README.md  __init__.py  api.py  board_view.py  coder_seam.py  config.py  failures.py  loop.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  retro.py  store.py  subagents.py  worktree.py
.github/workflows/: ci.yml  release.yml
skills/decompose-project/: SKILL.md
skills/loop-retro/: SKILL.md
skills/onboard-project/: SKILL.md
tests/: conftest.py  test_api.py  test_board_create_feature_dedup.py  test_board_updates.py  test_board_view.py  test_coder_seam.py  test_env_sanitization.py  test_failures.py  test_loop.py  test_packaging.py  test_progress.py  test_retro.py  test_source_issue_roundtrip.py  test_store.py  test_tools.py  test_worktree.py
